Closed Bug 741263 Opened 13 years ago Closed 13 years ago

Paris bindings constructors shouldn't abuse reserved identifiers.

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: emk, Assigned: peterv)

References

()

Details

Attachments

(1 file, 1 obsolete file)

Identifiers beggining with _ + upercase letter are always reserved in C/C++.
Hmm. We need something that will never collide with WebIDL identifiers. Peter, any ideas? I guess we could make this CONSTRUCTOR all in caps?
_ + lowercase letter is not reserved, so we could just make these _constructor, _finalize, etc, right?
Oh, yes. That would work. Especially because we upcase all other WebIDL stuff.
Attached patch v1 (obsolete) — Splinter Review
constructor is a reserved operation name in WebIDL, so I think we should use Constructor for the native function.
Assignee: nobody → peterv
Status: NEW → ASSIGNED
Attached patch v1Splinter Review
Attachment #611449 - Attachment is obsolete: true
Attachment #624846 - Flags: review?(bzbarsky)
Attachment #624846 - Flags: review?(bzbarsky) → review+
Target Milestone: --- → mozilla15
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: