Fix for bug 741263 (Paris bindings constructors shouldn't abuse reserved identifiers). r=bz.